syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment;

import "google/protobuf/timestamp.proto";

enum SubscriptionStatus {
    Subscription_Unknown = 0;
    Subscription_Pending = 1;
    Subscription_Active = 2;
    Subscription_Stopped = 3;
    Subscription_Paused = 4;
}

enum PaymentStatus {
    Payment_Unknown = 0;
    Payment_Pending = 1;
    Payment_Complete = 2;
    Payment_Failed = 3;
    Payment_Refunded = 4;
}

enum PaymentBulkAction {
    LookForNewPayments = 0;
    ReconcileAll = 1;
}

message PaymentBulkActionProgress {
    PaymentBulkAction Action = 1;
    float Progress = 2;
    string StatusMessage = 3;
    google.protobuf.Timestamp CreatedOnUTC = 21;
    google.protobuf.Timestamp CanceledOnUTC = 22;
    google.protobuf.Timestamp CompletedOnUTC = 23;
    string CreatedBy = 31;
    string CanceledBy = 32;
}
